--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           <div class="grid grid--1x2">
             <div class="testimonial__image">
               <img
-                src="images/testimonial.jpg"
+                src="Images/testimonial.jpg"
                 alt="A happy, smiling customer"
               />
               <span class="icon-container icon-container--accent">
