--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styles.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
@@ -27,7 +26,9 @@
     <!-- h${Heading $}*3 -->
     <header>
       <nav class="nav collapsible">
-        <a class="nav__brand" href="/"><img src="Images/logo.svg" alt="" /></a>
+        <a aria-label="Hesamify" class="nav__brand" href="/"
+          ><img src="Images/logo.svg" alt=""
+        /></a>
         <svg class="icon icon--white nav__toggler">
           <use xlink:href="Images/sprite.svg#menu"></use>
         </svg>
